--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,12 @@
         <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
 	<jacoco.version>0.8.6</jacoco.version>
     </properties>
-
+    <properties>
+        <java.version>17</java.version>
+        <modelmapper.version>3.2.0</modelmapper.version>
+        <sonar.host.url>http://10.10.28.32:9000/</sonar.host.url>
+        <sonar.login>squ_0c2b4f63a26bdb057ca553992af186423cfa4e3c</sonar.login>
+    </properties>
     <repositories>
         <repository>
             <id>vaadin-prereleases</id>
